...
                    android:gravity="left"
                    android:text="@string/songs"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    tools:listitem="@layout/item_cancion_album" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_track"
            app:srcCompat="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
...
