<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_artist"
    >


    <data>
        <variable
            name="viewModel"
            type="com.mobileapp.mymobileapp.ui.artists.ArtistsViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.artists.ArtistsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/screenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_artists"
                android:textSize="30sp"
                android:layout_gravity="center_vertical"
                android:contentDescription="Main screen title: Artists"
                android:paddingEnd="16dp" />

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:queryHint="Search Artist"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewArtists"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp" />
    </LinearLayout>
</layout>